--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<h1 style="color:green; text-align:center;">Asaduzzaman Rony</h1>
-		<h2 style="color:blue;">about us</h2>
+		<h2 style="color:red;">about us</h2>
 	</body>
 
 	
