User@DESKTOP-8CPLBO0 MINGW64 /d/git/Rony (master) $ git add .
User@DESKTOP-8CPLBO0 MINGW64 /d/git/Rony (master)
$ git  commit -m

--- a/HW22-09-18.html
+++ b/HW22-09-18.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<<html>
+<html>
   <head> <title>Home Work 23-09-2018</title>
     <style type="text/css">
       #maindiv{
@@ -38,7 +38,7 @@
       .
     </style>
   </head>
-  <<body>
+  <body>
     <div id="maindiv">
       <div class="col1 blue">111</div>
       <div class="col2 aqua">
