--- a/hw23-09-18.html
+++ b/hw23-09-18.html
@@ -52,6 +52,7 @@
 		.grey{
 			background : grey;
 		}
+		
 		</style>
 	</head>
 	<body>
@@ -64,7 +65,7 @@
 					<div class="row4 orange">4</div>
 				</div>
 			</div>
-			<div class="row2 grey">5</div>
+			<div class="row2 grey"><img src="https://media0.mensxp.com/media/content/2017/Aug/sad-life-truths-that-we-learn-to-live-with-over-time1400-1502281951_1100x513.jpg" style="width:100%; height:450px;"</div>
 			<div class="row3 orange">6</div>
 		</div>
 	
