--- a/Hw24-09-18.html
+++ b/Hw24-09-18.html
@@ -79,7 +79,9 @@
 	<body>
 		<div id="maindiv">
 			<div class="row1 grey">
-				<div class="col1 yellow"></div>
+				<div class="col1 yellow">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Logo_TV_2015.svg/1200px-Logo_TV_2015.svg.png" width="100%" height="160px"></img>
+				</div>
 				<div class="col5"></div>
 				<div class="col6">
 				<div class="row3 black"></div>
